# mori-agent-demo

./: .coverage  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GITHUB_SETUP.md  IMPLEMENTATION_VERIFICATION.md  Makefile  PERSONALIZATION_README.md  README.md  VERIFICATION_COMMANDS.md  pyproject.toml  verify_implementation.py  麻布台ヒルズ_AIコンシェルジュツール一覧.xlsx
.claude/: settings.json  settings.local.json
.claude/commands/: define_spec.md
.devcontainer/: devcontainer.json
.streamlit/: config.toml
input/: events.csv  filtered_product_data.csv  filtered_store_data_20250926_052949.csv  filtered_store_data_20251007_141616.csv  filtered_store_data_カテゴリー情報あり.csv  filtered_store_data_食べログ追加したVER2.csv  narattive_data_2.json  narrative_data.csv  narrative_data.json  narrative_data_2.csv  stores.csv
login_cofig/: README.md  config.yaml  config.yaml.example  user_info.csv  user_info.csv.example
scripts/: setup.sh
specs/: イベントデータの検索をSQLを使って行うツールの追加.md  プラン計画をSQLを使って行うツールの追加.md  ユーザーの趣味嗜好分析をSQLを使って行うツールの追加.md  ユーザープロファイル取得ツールの追加.md  商品の検索をSQLを使って行うツールの追加.md  天気情報取得ツールの追加.md  店舗データの検索をSQLを使って行うツールの追加.md  店舗検索・営業時間統合ツール仕様書.md  未実装_商品の検索をSQLを使って行うツールの追加.md
src/: app.py
src/config/: prompts.py  settings.py
src/core/agents/: __init__.py  base_agent.py  chat_agent.py
src/core/common/: __init__.py  output_normalizer.py
src/core/models/: agent_model.py
src/core/services/: agent_service.py
src/core/tools/: __init__.py  activity_planner_tool.py  base.py  base_sql_search_tool.py  data_search_tool.py  event_search_tool.py  gift_recommendation_tool.py  math_tool.py  product_search_tool.py  registry.py  store_hours_tool.py  store_search_tool.py  time_tool.py  user_analysis_tool.py  user_profile_tool.py  weather_tool.py
src/infrastructure/llm/: __init__.py  anthropic_client.py  langchain_adapter.py  llm_factory.py
src/mori_agent_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ui/components/: chat_interface.py  sidebar.py
src/ui/config/: __init__.py  tool_display_config.py
src/ui/layouts/: base.py
src/ui/pages/: agent_chat.py
src/utils/: create_yaml.py  logger.py
tests/integration/infrastructure/: test_langchain_adapter_unified.py  test_tool_input_streaming.py
tests/unit/core/agents/: test_chat_agent.py
tests/unit/core/common/: test_output_normalizer.py
tests/unit/core/models/: test_agent_model.py
tests/unit/core/services/: test_agent_service.py
tests/unit/core/tools/: __init__.py  test_base.py  test_event_search_tool.py  test_math_tool.py  test_product_search_tool.py  test_store_search_tool.py  test_time_tool.py  test_user_profile_tool.py  test_weather_tool.py
tests/unit/utils/: test_logger.py
